--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   pull_to_refresh: ^1.1.5
   cached_network_image: "^0.4.1"
   shared_preferences: ^0.4.2
+  flutter_jpush: ^0.0.4
 
 dev_dependencies:
   flutter_test:
